Have added several tests with Jakarta REST Clent and RESTeasy, XML and JSON